# dInfer

./: README.md  pyproject.toml  setup.py
benchmarks/: benchmark.py  benchmark_dataset.py  benchmark_dataset_fastdllm.py  benchmark_dataset_sglang.py  benchmark_dataset_sorted.py
evaluations/: eval_dinfer.py  eval_dinfer_sglang.py  eval_guide.md  eval_llada_1.5.sh  eval_llada_mini.sh  eval_llada_moe.sh
python/dinfer/decoding/: generate_uniform.py  parallel_strategy.py  serving.py
python/dinfer/model/: modeling_llada.py
tests/: test.py  test_bd.py  test_bd_serving.py  test_bd_serving_tpep.py  test_llada.py  test_llada_moe.py
