[project]
name = "dinfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "accelerate>=1.12.0",
    "lm-eval>=0.4.9.2",
    "numpy>=2.2.6",
    "pip>=25.3",
    "scipy>=1.16.3",
    "setuptools>=79.0.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "transformers<5",
    "vllm==0.10.2",
    "wandb>=0.23.1",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"
